fixed alignment of plus icon

--- a/app/styles/components/_severity-icon.scss
+++ b/app/styles/components/_severity-icon.scss
@@ -51,13 +51,9 @@ i.severity-icon {
     color: #f39800;
   }
 
-  &.critical {
-    &:before { display: none; }
-
-    &:after {
-      content: "\e904";
-      color: #CC0000;
-    }
+  &.critical:after {
+    content: "\e904";
+    color: #CC0000;
   }
 
   &.total-risk {
